--- a/json_arrays_manipulation_project/steps.ipynb
+++ b/json_arrays_manipulation_project/steps.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPQFDB53Z3yTU3Vvl4CINV9",
+      "authorship_tag": "ABX9TyP89sKCHdmlws265nAKA/Xq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -794,7 +794,51 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# streamlit app demonstration\n",
+        "import streamlit as st\n",
+        "import pandas as pd\n",
+        "\n",
+        "# loading data\n",
+        "data = pd.read_csv('json_arrays_manipulation_project/demo_app/Reviews-Array.txt')\n",
+        "# data manipulation\n",
+        "df = pd.DataFrame.from_dict(data=data.iloc[:, 0].to_dict(), orient='index')\n",
+        "cols = df.columns\n",
+        "\n",
+        "\n",
+        "def main():\n",
+        "  # App Title\n",
+        "  st.markdown(\"<h1 style='text-align: center;'> Script Demo </h1>\", unsafe_allow_html=True)\n",
+        "  st.write('---')\n",
+        "\n",
+        "  # raw data preview\n",
+        "  st.markdown(\"<h2 style='text-align: center;'> Raw Data </h2>\", unsafe_allow_html=True)\n",
+        "  st.write('json_arrays_manipulation_project/demo_app/Reviews-Array.txt')\n",
+        "  st.write('---')\n",
+        "\n",
+        "  # select cols\n",
+        "  col_select = st.multiselect('Select desired columns', cols)\n",
+        "\n",
+        "  # display selected data\n",
+        "  submit = st.button('Get filtered Data', use_container_width=True)\n",
+        "  if submit:\n",
+        "    st.dataframe(data[col_select], use_container_width=True)\n",
+        "\n",
+        "    # prepare to download filtered data\n",
+        "    csv = data[col_select].to_csv()\n",
+        "    st.download_button(\n",
+        "          label=\"Download filtered data\",\n",
+        "          data=csv,\n",
+        "          file_name='filered.csv',\n",
+        "          mime='text/csv',\n",
+        "          use_container_width=True\n",
+        "        )\n",
+        "  st.write('---')\n",
+        "\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "  main()"
+      ],
       "metadata": {
         "id": "gAMfx9AW08k7"
       },
